# sec-dashboard

./: .gitignore  README.md  app.py  edgar.py  eval_rag.py  metrics.py  pdf_extract.py  pyproject.toml  rag.py  requirements.txt  smoke_test.py  universe.json  universe.py
.streamlit/: config.toml
scripts/: build_universe.py
tests/: test_pdf_extract.py  test_rag.py
